<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/snap_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/description"
            android:src="@drawable/img_golf" />

        <ImageView
            android:id="@+id/snap_report_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/snap_image"
            android:layout_alignEnd="@+id/snap_image"
            android:layout_alignRight="@+id/snap_image"
            android:clickable="true"
            android:contentDescription="@string/description"
            android:focusable="true"
            android:padding="@dimen/padding_10"
            android:src="@drawable/action_report" />

        <TextView
            android:id="@+id/snap_info"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/snap_image"
            android:padding="8dp"
            android:text="@string/info_test"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:fontFamily="@font/rocko" />

        <LinearLayout
            android:id="@+id/snap_stats"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/snap_image"
            android:orientation="horizontal"
            android:padding="8dp"
            android:textColor="?android:textColorSecondary">

            <Button
                android:id="@+id/snap_action_comment"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:fontFamily="@font/rocko"
                android:drawableTop="@drawable/action_forum"
                android:text="@string/action_comment" />

            <Button
                android:id="@+id/snap_action_love"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/favorite"
                app:fontFamily="@font/rocko"
                android:text="@string/action_tata" />

            <Button
                android:id="@+id/snap_action_like"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/like"
                app:fontFamily="@font/rocko"
                android:text="@string/action" />

            <Button
                android:id="@+id/snap_action_dislike"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/action_dislike"
                app:fontFamily="@font/rocko"
                android:text="@string/action_dislike" />


        </LinearLayout>

    </RelativeLayout>



</android.support.v7.widget.CardView>
